# python-api-for-okcoin

./: .gitignore  LICENSE  README.md  first_figure.html  pyproject.toml  setup.cfg  setup.py
okcoin/: __init__.py
reports/: ledger_20211012_204547.csv
src/: trade.conf
src/okcoin/: DataMangement.py  DataObjects.py  OLDokcoin.py  Reports.py  __init__.py  http2_test.py  test.py  ticker.py
tests/: unittest.py
