[metadata]
# replace with your username:
name = okcoin
version = 0.0.1
author = Gregory Brunner
author_email = gregory.brunner@protonmail.com
description = A Python package for interfacing with okcoin.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gbrunner/python-api-for-okcoin
project_urls =
    Bug Tracker = https://github.com/gbrunner/python-api-for-okcoin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src